--- a/style.css
+++ b/style.css
@@ -56,8 +56,21 @@
   }
   /* Location section: add same padding as info text */
   #location .location-text {
-    padding: 0 0.7rem;
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
+    margin-left: 0;
+    margin-right: 0;
   }
+  /* Reorder map for mobile: after second header, before main text */
+  #location .grid {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    text-align: left;
+  }
+  #location .grid > .map-wrap { order: 2; }
+  #location .grid > div > h3 { order: 1; }
+  #location .grid > div > .location-text { order: 3; }
 
   /* Info lists: allow line breaks */
   .info-list {
