--- a/style.css
+++ b/style.css
@@ -55,22 +55,31 @@
     display: block;
   }
   /* Location section: add same padding as info text */
-  #location .location-text {
-    padding-left: 0.7rem;
-    padding-right: 0.7rem;
+  /* Location section: apply padding/margin to all texts */
+  #location .location-text,
+  #location .location-distances,
+  #location .distance-list,
+  #location .grid > div > h3,
+  #location .grid > div > p {
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
     margin-left: 0;
     margin-right: 0;
   }
-  /* Reorder map for mobile: after second header, before main text */
+  /* Reorder map for mobile: map between main header and subheader */
   #location .grid {
     display: flex;
     flex-direction: column;
     align-items: stretch;
     text-align: left;
   }
-  #location .grid > .map-wrap { order: 2; }
-  #location .grid > div > h3 { order: 1; }
-  #location .grid > div > .location-text { order: 3; }
+  #location .grid > .map-wrap { order: 1; }
+  #location .grid > div > h3 { order: 2; }
+  #location .grid > div > .location-text,
+  #location .grid > div > .location-distances,
+  #location .grid > div > .distance-list {
+    order: 3;
+  }
 
   /* Info lists: allow line breaks */
   .info-list {
